--- a/src/components/Formulario/CampoTexto/CampoTexto.css
+++ b/src/components/Formulario/CampoTexto/CampoTexto.css
@@ -29,6 +29,7 @@
     font-weight: 400;
     padding-left: 21px;
     padding-right: -21px;
+    font-size: 16px;
     
     box-sizing: border-box;
   
